# EzResearchLM

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  EZRESEARCHLM_SMOKE_AND_COST_REPORT.md  EZresearchLM_DELIVERY_AUDIT.md  README.md  Rules_Of_Writing.md  SETUP.md  pyproject.toml
.claude/: settings.json
.claude/commands/: doctor.md  research.md  setup.md
docs/: auth-model.md  claude-operator-guide.md  codex-operator-guide.md  configuration.md  debugging.md  github-delivery-checklist.md  pipeline-reference.md  source-rescue.md
examples/: must-have.example.json  queries.example.json  questions.example.json
notebooklm/scripts/: audit_qa_citations.py  batch_ask.py  compile_block_summary.py  compile_qa_summary.py  compile_source_curation.py  extract_passages.py  generate_questions.py  import_sources.py  list_sources_to_json.py  notebooklm_large_corpus.py  resolve_citations.py  update_source_usage.py  upload_sources_parallel.ps1
scripts/: auto_login.ps1  run_hermes_answer.ps1  run_hermes_doctor.ps1  run_hermes_pipeline.ps1  run_search_topic.ps1  run_smoke_tests.ps1  setup_ezresearch.ps1  upload_sources_parallel.ps1
